run all CI with race detector
Signed-off-by: André Martins <andre@cilium.io>

--- a/.github/actions/helm-default/action.yaml
+++ b/.github/actions/helm-default/action.yaml
@@ -23,6 +23,7 @@ runs:
       shell: bash
       run: |
         echo sha=${{ inputs.image-tag }} >> $GITHUB_OUTPUT
+        SHA="${SHA}-race"
 
         CILIUM_INSTALL_DEFAULTS="--chart-directory=${{ inputs.chart-dir }} \
           --helm-set=debug.enabled=true \
