--- a/.github/workflows/tests-e2e-upgrade.yaml
+++ b/.github/workflows/tests-e2e-upgrade.yaml
@@ -670,6 +670,23 @@ jobs:
           kubectl apply -k untrusted/cilium-newest/examples/kubernetes-local-redirect
           kubectl rollout status -n kube-system ds/node-local-dns
 
+      - name: Prepare the bpftrace parameters
+        id: bpftrace-params
+        run: |
+          CILIUM_INTERNAL_IPS=$(kubectl get ciliumnode -o jsonpath='{.items[*].spec.addresses[?(@.type=="CiliumInternalIP")].ip}')
+          if [[ "${{ matrix.ipv6 }}" == "false" ]]; then
+            CILIUM_INTERNAL_IPS="${CILIUM_INTERNAL_IPS// / ::1 } ::1"
+          fi
+
+          echo "params=$CILIUM_INTERNAL_IPS" >> $GITHUB_OUTPUT
+
+      - name: Start unencrypted packets check for upgrade
+        uses: ./.github/actions/bpftrace/start
+        with:
+          # disable the check for proxy traffic.
+          script: ./.github/actions/bpftrace/scripts/check-ipsec-leaks.bt
+          args: ${{ steps.bpftrace-params.outputs.params }} "false" "wireguard"
+
       - name: Start conn-disrupt-test
         shell: bash
         run: |
@@ -693,6 +710,9 @@ jobs:
           cilium status --wait --interactive=false --wait-duration=10m
           kubectl get pods --all-namespaces -o wide
           kubectl -n kube-system exec daemonset/cilium -- cilium status
+
+      - name: Assert that no unencrypted packets are leaked during upgrade
+        uses: ./.github/actions/bpftrace/check
 
       - name: Setup Cilium CLI flags
         id: cli-flags
