--- a/.github/workflows/conformance-k8s-kind.yaml
+++ b/.github/workflows/conformance-k8s-kind.yaml
@@ -31,8 +31,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TODO add "dual" and "ipv6", "ipv6" fails to install cilium
-        ipFamily: ["ipv4"]
+        # TODO add "ipv6", "ipv6" fails to install cilium
+        ipFamily: ["ipv4", "dual"]
     env:
       IP_FAMILY: ${{ matrix.ipFamily }}
       job_name: "Installation and Conformance Test"
@@ -136,6 +136,9 @@ jobs:
           CILIUM_INSTALL_DEFAULTS="${{ steps.default_vars.outputs.cilium_install_defaults }} \
             --helm-set=cni.chainingMode=portmap \
             --helm-set-string=kubeProxyReplacement=true"
+          if [ "${IP_FAMILY}" == "dual" ]; then
+            CILIUM_INSTALL_DEFAULTS="${CILIUM_INSTALL_DEFAULTS} --helm-set=ipv6.enabled=true"
+          fi
           echo cilium_install_defaults=${CILIUM_INSTALL_DEFAULTS} >> $GITHUB_OUTPUT
           echo sha=${{ steps.default_vars.outputs.sha }} >> $GITHUB_OUTPUT
 
@@ -175,7 +178,6 @@ jobs:
           # Disruptive|Serial : require to run in serial and perform disruptive operations on clusters (reboots, ...)
           # Federation|PerformanceDNS : unrelated sig-network tests
           # Feature : skip features that are not GA, however, some of them should be enabled, per example [Feature:ProxyTerminatingEndpoints]
-          # DualStack : only with dualstack clusters
           # KubeProxy|kube-proxy : kube-proxy specifics
           # LoadBalancer|GCE|ExternalIP : require a cloud provider, some of them are GCE specifics
           # Netpol|NetworkPolicy : network policies, demand significant resources and use to be slow, better to run in a different job
@@ -187,7 +189,7 @@ jobs:
           export E2E_REPORT_DIR=${PWD}/_artifacts
           /usr/local/bin/ginkgo --nodes=25                \
             --focus="\[Conformance\]|\[sig-network\]"     \
-            --skip="Feature|Federation|PerformanceDNS|DualStack|Disruptive|Serial|KubeProxy|kube-proxy|ExternalIP|LoadBalancer|GCE|Netpol|NetworkPolicy|rejected|externalTrafficPolicy"   \
+            --skip="Feature|Federation|PerformanceDNS|Disruptive|Serial|KubeProxy|kube-proxy|ExternalIP|LoadBalancer|GCE|Netpol|NetworkPolicy|rejected|externalTrafficPolicy"   \
             /usr/local/bin/e2e.test                       \
             --                                            \
             --kubeconfig=${PWD}/_artifacts/kubeconfig.conf     \
@@ -218,6 +220,7 @@ jobs:
           name: cilium-sysdumps
           path: cilium-sysdump-*.zip
           retention-days: 5
+          overwrite: true
 
       - name: Upload features tested
         if: ${{ always() }}
@@ -230,7 +233,7 @@ jobs:
         if: ${{ !success() }}
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
-          name: kind-logs
+          name: "kind-logs-${{ matrix.ipFamily }}"
           path: ./_artifacts/logs
           retention-days: 5
 
@@ -238,7 +241,7 @@ jobs:
         if: ${{ success() }}
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4
         with:
-          name: kubernetes-e2e-junit
+          name: "kubernetes-e2e-junit-${{ matrix.ipFamily }}"
           path: './_artifacts/*.xml'
 
       - name: Publish Test Results As GitHub Summary
